src/App.css
.App {
  text-align: center;
  display: grid;
  height: 100vh;
}

#calc {
  justify-self: center;
  align-self: center;
  width: 350px;
  height: 400px;
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-row-gap: 1px;
  grid-column-gap: 1px;
  background-color: black;
  border: 2px solid black;
  font-size: 22px;
  color: white;
  font-weight: 400;
}

#display {
  grid-area: 1 / 1 / span 1 / span 4;
  background: black;
}

#ac {
  grid-area: 2 / 1 / span 1 / span 2;
  background: #96260F;
}

.operations {
  background: gray;
}

.numbers {
  background-color: #61605D;
}

#equals {
  grid-area: 5 / 4 / span 2 / span 1;
  background: #06415C;
  align-content: center;
  line-height: 97px;
}

#zero {
  grid-area: 6 / 1 / span 1 / span 2;
}

